src/test/ui/consts/issue-76064.stderr
error[E0658]: panicking in constants is unstable
  --> $DIR/issue-76064.rs:3:17
   |
LL | struct Bug([u8; panic!("panic")]);
   |                 ^^^^^^^^^^^^^^^
   |
   = note: see issue #51999 <https://github.com/rust-lang/rust/issues/51999> for more information
   = help: add `#![feature(const_panic)]` to the crate attributes to enable
   = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
